@@ -22,6 +22,8 @@ Trunk (unreleased changes)
  5. HADOOP-434.  Change smallJobsBenchmark to use standard Hadoop
     scripts.  (Sanjay Dahiya via cutting)
 
+ 6. HADOOP-453.  Fix a bug in Text.setCapacity().  (siren via cutting)
+
 
 Release 0.5.0 - 2006-08-04
 
